gcc/testsuite/rust/rustc/ui/issues/issue-49040.rs
#![allow(unused_variables)]; // { dg-error ".E0601." "" { target *-*-* } }
// { dg-error ".E0601." "" { target *-*-* } .-1 }
fn foo() {}

